# id

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  deploy-yandex-cloud.yml
scripts/ci/: check-yc-terraform-local.sh  deploy-frontend-object-storage.sh  smoke-yc-gateway.sh
services/id/: Dockerfile  RUNBOOK.md  TROUBLESHOOTING.md  conftest.py  pyproject.toml  pytest.ini
services/id/docs/compliance/: control-matrix.md
services/id/k8s/: configmap.yaml  deployment.yaml  jobs.yaml
services/id/scripts/: check_coverage.py  generate_compliance_matrix.py
services/id/src/accounts/: models.py
services/id/src/accounts/api/: exception_handlers.py  router.py  router_auth.py  router_headless.py  router_magic_link.py  router_oauth.py  security.py
services/id/src/accounts/migrations/: 0002_profile_privacy_events.py
services/id/src/accounts/services/: activity.py  auth.py  deletion.py  emailing.py  export.py  form_token.py  headless.py  mfa.py  oauth.py  passkeys.py  preferences.py  profile.py  rate_limit.py  reauth.py  sessions.py  timezone.py
services/id/src/accounts/tests/: test_api.py  test_exception_handlers.py  test_mfa_unit.py  test_passkeys_unit.py  test_rate_limit.py  test_security.py  test_services.py
services/id/src/app/: cloud_runtime.py  settings.py  urls.py
services/id/src/core/: health.py  http.py  logging_config.py  middleware.py  monitoring.py  resilience.py  security.py  telemetry.py
services/id/src/core/management/commands/: migrate_ydb.py
services/id/src/core/tests/: test_cloud_runtime.py  test_errors.py  test_health.py  test_http.py  test_internal_signature.py  test_logging_config.py  test_middleware.py  test_monitoring.py  test_resilience.py
services/id/src/idp/: keys.py  models.py  router.py  schemas.py  services.py  views.py
services/id/src/idp/management/commands/: setup_db.py  setup_portal_client.py
services/id/src/idp/migrations/: 0001_initial.py  0002_alter_oidctoken_id.py
services/id/src/idp/tests/: test_oidc.py
services/id/src/updspaceid/: api.py  dev_api.py  http.py  models.py  providers.py  services.py
services/id/src/updspaceid/management/commands/: issue_admin_magic_link.py
services/id/src/updspaceid/migrations/: 0001_initial.py
services/id/src/updspaceid/tests/: test_core_flows.py  test_magic_link_exchange.py  test_providers_protocol.py  test_providers_security.py
web/id-frontend/: eslint.config.js  package.json  (+3 more)
(+43 files in other folders)
