[project]
name = "updspaceid"
version = "0.1.0"
description = "Identity Service"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2,<6.0",
    "django-ninja>=1.4.3,<2.0",
    "django-allauth[socialaccount]",
    "django-cors-headers",
    "django-storages",
    "django-ydb-backend==0.0.1b1",
    "djangorestframework",
    "email-validator",
    "fido2",
    "qrcode[pil]",
    "psycopg[binary]",
    "dj-database-url",
    "boto3",
    "gunicorn",
    "factory-boy",  # often used in tests
    "pillow", # for image fields
    "argon2-cffi",
    "pyjwt",
    "djangorestframework-simplejwt",
    "cryptography",
    "redis",  # for Django cache backend
    "pytz",  # for timezone management
    "prometheus-client",
    "django-prometheus",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-django",
    "opentelemetry-instrumentation-requests",
    "ydb[yc]==3.29.7",
    "ydb-dbapi==0.1.20",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/accounts", "src/app", "src/core", "src/idp", "src/updspaceid"]
